--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
                     height="100" style="border-radius: 50%;">
             </div>
             <div class="hero-text">
-                <p class="pop-text">
-                    Hi, I'm Akash Sasikumar
-                </p>
+                <p class="pop-text">Hi, I'm Akash Sasikumar</p>
                 <h1 class="animated-heading">CRAFTING CODE & DESIGNING EXPERIENCES</h1>
                 <h2 class="animated-subheading">A Computer Science Engineer by training, a dedicated UI/UX Designer at
                     heart, an Algorithmic Trader
@@ -138,8 +136,7 @@
     <section id="portfolio">
         <div class="container" style="text-align: center;">
             <div class="heading-content">
-                <h2 style="font-size: 36px; font-weight: 600; color: #ffffff;">
-                    Featured Works</h2>
+                <h2 style="font-size: 36px; font-weight: 600;">Featured Works</h2>
                 <p class="margintop-sm" style="font-family: 'Poppins', sans-serif; font-size: 18px; color: #ffffff;">
                     A showcase of my diverse projects blending programming, design, and trading. Explore web
                     applications and technical indicators that highlight my passion for technology and creativity.</p>
@@ -295,11 +292,8 @@
                 <p class="margintop" style="font-family: 'Poppins', sans-serif; font-size: 18px; color: #ffffff;">
                     Reach out to discuss your ideas and collaborate on exciting projects. I'm
                     eager to hear from you!</p>
-                <a href="#" class="btn btn-pill open-modal"
-                    style="margin-top: 15px; background-color: #6044D8; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Contact
-                    Me</a>
-                <a href="assets/files/Resume - AKASH S.pdf" class="btn btn-pill"
-                    style="margin-top: 15px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;"
+                <a href="#" class="primary-btn open-modal" style="margin-top: 15px;">Contact Me</a>
+                <a href="assets/files/Resume - AKASH S.pdf" class="secondary-btn" style="margin-top: 15px;"
                     download>Download Resume</a>
             </div>
         </div>
