--- a/blog-1.html
+++ b/blog-1.html
@@ -96,7 +96,13 @@
                     </div>
                     <div class="about-content" style="margin-top: 20px;">
                         <h2>Introduction</h2>
-                        <p>In the rapidly advancing digital landscape, the design of user interface (UI) and user experience (UX) holds a crucial position in determining the triumph of digital products. With the ongoing progression of technology, the significance of providing an effortless and instinctive user experience gains even greater prominence. Among the fundamental principles in UI/UX design, simplicity stands out as a potent force. In this article, we will examine the notion of simplicity in design and examine insightful articles that underscore its profound influence on crafting outstanding user interfaces.</p>
+                        <p>In the rapidly advancing digital landscape, the design of user interface (UI) and user
+                            experience (UX) holds a crucial position in determining the triumph of digital products.
+                            With the ongoing progression of technology, the significance of providing an effortless and
+                            instinctive user experience gains even greater prominence. Among the fundamental principles
+                            in UI/UX design, simplicity stands out as a potent force. In this article, we will examine
+                            the notion of simplicity in design and examine insightful articles that underscore its
+                            profound influence on crafting outstanding user interfaces.</p>
                         <p><strong>The Essence of Simplicity in UI/UX Design</strong><br>
                             Simplicity in UI/UX design refers to the art of distilling complex ideas and interactions
                             into a clean, intuitive, and aesthetically pleasing interface. It's about creating designs
@@ -169,11 +175,8 @@
                 <p class="margintop" style="font-family: 'Poppins', sans-serif; font-size: 18px; color: #ffffff;">
                     Reach out to discuss your ideas and collaborate on exciting projects. I'm
                     eager to hear from you!</p>
-                <a href="#" class="btn btn-pill open-modal"
-                    style="margin-top: 15px; background-color: #6044D8; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Contact
-                    Me</a>
-                <a href="assets/files/AKASH - Resume.pdf" class="btn btn-pill"
-                    style="margin-top: 15px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;"
+                <a href="#" class="primary-btn open-modal" style="margin-top: 15px;">Contact Me</a>
+                <a href="assets/files/Resume - AKASH S.pdf" class="secondary-btn" style="margin-top: 15px;"
                     download>Download Resume</a>
             </div>
         </div>
