--- a/about-me.html
+++ b/about-me.html
@@ -166,11 +166,8 @@
                 <p class="margintop" style="font-family: 'Poppins', sans-serif; font-size: 18px; color: #ffffff;">
                     Reach out to discuss your ideas and collaborate on exciting projects. I'm
                     eager to hear from you!</p>
-                <a href="#" class="btn btn-pill open-modal"
-                    style="margin-top: 15px; background-color: #6044D8; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Contact
-                    Me</a>
-                <a href="assets/files/AKASH - Resume.pdf" class="btn btn-pill"
-                    style="margin-top: 15px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;"
+                <a href="#" class="primary-btn open-modal" style="margin-top: 15px;">Contact Me</a>
+                <a href="assets/files/Resume - AKASH S.pdf" class="secondary-btn" style="margin-top: 15px;"
                     download>Download Resume</a>
             </div>
         </div>
