--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- Hero Section -->
     <section id="hero"
-        style="background-image: url('assets/images/Figma_designs/Hero_bg_frame.svg'); background-size: cover; background-position: center center;">
+        style="background-image: url('assets/images/Figma_designs/Hero_bg_frame-none.svg'); background-size: cover; background-position: center center;">
         <div class="container text-center" style="margin-top: 100px;">
             <div class="profile-picture" style="margin-bottom: 25px;">
                 <img src="assets/images/Figma_designs/profile_picture.png" alt="Profile Picture" width="100"
@@ -91,9 +91,7 @@
             <div class="hero-text">
                 <p class="pop-text">Hi, I'm Akash Sasikumar</p>
                 <h1 class="animated-heading">CRAFTING CODE & DESIGNING EXPERIENCES</h1>
-                <h2 class="animated-subheading">A Computer Science Engineer by training, a dedicated UI/UX Designer at
-                    heart, an Algorithmic Trader
-                    in practice, and a Software Developer crafting innovative Web Applications.</h2>
+                <h2 class="animated-subheading">Computer Science Engineer | UI/UX Designer | Algorithmic Trader</h2>
                 <a href="#call-to-action" class="btn-animated-gsap primary-btn">Get in touch</a>
             </div>
         </div>
